tests/Compilation/negative/test003.juvix
-- pattern matching coverage in lambdas
module test003;

import Stdlib.Prelude open;

main : Nat := λ{ zero := 1 | (suc (suc _)) := 2 } 1;
